<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_16"
    android:paddingEnd="@dimen/padding_16"
    android:paddingTop="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_16"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@drawable/splash"
    android:weightSum="100"
    tools:context=".login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="horizontal">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/prg_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:indicatorColor="@color/colorAccent"
            app:indicatorName="BallPulseIndicator" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:visibility="visible"
        android:layout_weight="5">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobileNumber"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="16dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textDirection="anyRtl" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_weight="5">

        <ir.parkban.general.customView.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/plz_insert_activation_code"
            android:id="@+id/txt_code"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textDirection="anyRtl" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="horizontal">


        <ir.parkban.general.customView.CustomButtonView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_weight="1"
            android:background="@drawable/bck_round_yellow"
            android:text="@string/login_register"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/font_size_18sp"
             />
    </LinearLayout>
</LinearLayout>