<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/app_bar"></include>
    </android.support.design.widget.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8">

                <Switch
                    android:id="@+id/swtch_showtraffic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_8"
                    android:layout_alignParentLeft="true" />

                <ir.parkban.general.customView.CustomTextView
                    android:id="@+id/show_traffic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_8"
                    android:text="@string/show_traffic"
                    android:textSize="@dimen/font_size_20sp"
                    app:fontFamily="@string/iran_sans_bold"
                    android:layout_alignParentRight="true" />


            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_8">


                <ir.parkban.general.customView.CustomTextView
                    android:id="@+id/txtlogOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_8"
                    android:text="@string/exit"
                    android:textSize="@dimen/font_size_20sp"
                    app:fontFamily="@string/iran_sans_bold"
                    android:layout_alignParentRight="true" />

                <ImageView
                    android:id="@+id/imgLogOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:srcCompat="@drawable/ic_ico_exit"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="12dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="12dp" />

            </RelativeLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
